2012-12-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Added UTF-32 conversion. Added non-lossy
	ASCII conversion functions. Consolidated some frequently used
	constructs into macros for easy maintenance.
	* Source/CFString.c: Short-cut for converting UTF-16 to UTF-16.
	* Tests/CFString/encodings.m: Added another test.

2012-12-18 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Added local function to convert UTF-32
	to/from UTF-16 (unused at this time).
	* Source/CFString.c: Fix bugs related to changes to
	GSStringEncodingToUnicode().
	* Tests/CFString/encodings.m: Add test for some of the changes made
	to Unicode conversion.

2012-12-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Add local function to converted UTF-8
	to/from UTF-16.
	* Source/CFString.c: Modify functions for getting characters.
	* Source/NSCFError.m:
	* Source/NSCFData.m: Include NSString.h to avoid compiler warning.

2012-12-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/config.h.in:
	* configure:
	* configure.ac: Add test for endianess and size of void *.
	* Source/GSPrivate.h: Use result of endianess test.

2012-11-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c:
	* Source/NSCFType.m:
	* Source/NSCFString.m: Apply modified version of Lubos Dolezel's
	patch.
	* Tests/CFString/objc_bridge.m: Tests for toll-free bridge.

2012-10-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFSocket.c: Implement CopyAddress functions.

2012-10-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFSocket.h: Use winsock on Windows.
	* Source/CFSocket.c: Implement Create and Address functions.

2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFSocket.h: Use winsock on Windows.
	* Source/CFSocket.c: Implement Create and Address functions.

2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m: Call the CoreBase initialization code before