@@ -845,14 +845,17 @@ CFStringGetBytes (CFStringRef str, CFRange range, CFStringEncoding enc,
           || enc == kCFStringEncodingUTF16BE
           || enc == kCFStringEncodingUTF16LE)
         {
-          
           UniChar *dst;
           
           dst = (UniChar *)buffer;
           if (isExtRep && enc == kCFStringEncodingUTF16)
-            dst = 0xFEFF;
+            {
+              *dst = 0xFEFF;
+              dst++;
+            }
           range.length = GS_MIN (range.length, maxBufLen / sizeof(UniChar));
-          CFStringGetCharacters (str, range, (UniChar*)buffer);
+          converted = range.length;
+          CFStringGetCharacters (str, range, dst);
           if (enc == UTF16_ENCODING_TO_SWAP)
             {
               UniChar *end;
