@@ -1389,17 +1389,17 @@ CFURLAppendPercentEscapedForCharacter (char **dst, UniChar c,
   CFStringEncoding enc)
 {
   CFIndex len;
-  char buffer[MAX_BYTES];
+  UInt8 buffer[MAX_BYTES];
   const UniChar *source;
   
   source = &c;
   if ((len =
-      GSStringEncodingFromUnicode(enc, buffer, 8, source, 1, 0, false, NULL)))
+      GSStringEncodingFromUnicode(enc, buffer, MAX_BYTES, source, 1, 0, false, NULL)))
     {
-      char hi;
-      char lo;
-      char *target;
-      const char *end;
+      UInt8 hi;
+      UInt8 lo;
+      UInt8 *target;
+      const UInt8 *end;
       
       target = buffer;
       end = target + len;
@@ -1564,10 +1564,13 @@ CFURLCharacterForPercentEscape (CFStringInlineBuffer *src, CFIndex *idx,
   
   c = 0;
   str = bytes;
-  num = GSStringEncodingToUnicode (enc, &c, 1, (const char*)str, j,
+  num = GSStringEncodingToUnicode (enc, &c, 1, (const UInt8*)str, j,
     false, NULL);
   if (num)
-    (*idx) += (CFIndex)(str - bytes) + num;
+    {
+      // For the first percent 2 characters get used, for all later three
+      (*idx) += 2 + 3 * (num - 1);
+    }
   return c;
 }
 
