@@ -1,3 +1,13 @@
+2013-03-16 Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/CFPropertyList.c,
+	* Source/CFString.c,
+	* Source/CFRunLoop.c: Remove compiler warnings
+	* Source/CFURL.c: Remove compiler warnings and get tests to work.
+	* Source/CFStringEncoding.c: Add missing code for UTF16.
+	* Source/NSCFString.m: Comment out all methods where super class code
+	is more complete.
+
 2012-12-20 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFStringEncoding.c: Added UTF-32 conversion. Added non-lossy
